# protey-hometask-6

./: CMakeLists.txt  README.md  test.cpp
src/client/: client.cpp
src/common/: expression.cpp  expression.h
src/server/: server.cpp
